--- a/markowitz-portfolio-theory.ipynb
+++ b/markowitz-portfolio-theory.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modern Portfolio Theory\n",
+    "\n",
+    "Let us consider a portfolio  \n",
+    "\n",
+    "One of the assumptions in financial modelling is that the return($R$) of a security is a random variable. The standard deviation of the return is considered to be a measure of risk. The relationship between the log return and the simple return is $r_t= log(1+R_t)$ or $R_t=e^{r_t}-1$. Log returns are more useful becuase of the additivity of risks. Lets examine this below.  \n",
+    "* For mutliperiod ($k$ periods) returns,  $r_t[k]=r_t + r_{t-1} + \\ldots + r_{t-k+1}$.\n",
+    "* $Var(r_t[k]) = Var(r_t) + Var(r_{t-1}) + \\ldots + Var(r_{t-k+1})$. This holds true only when $r_i$ are independent.\n",
+    "\n",
+    "The expectation value of the return is $\\mu = E (R)$. The standard deviation of the return($\\sigma$) is considered to be a measure of risk. The return and the standard deviation have the same units.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Some rules on random variables:\n",
+    "For example, consider random variables $X$,$Y$  \n",
+    "* $E(X+Y)= E(X)+E(Y)$\n",
+    "* Say $E(X)=\\mu_X$, $Var(X)= E[(X_i-\\mu_X)^2] = E(X^2)-\\mu_X^2$\n",
+    "* $Var(aX)=a^2Var(X)$\n",
+    "* $Cov(X,Y)=E[(X-\\mu_X)(Y-\\mu_Y)]=E(XY)-E(X)E(Y)$\n",
+    "* $Var(X+Y)=Var(X)+2Cov(X,Y)+Var(Y)$\n",
+    "* If $X$ and $Y$ are independent, $Cov(X,Y)=0$\n",
+    "* Correlation = $\\frac{Cov(X,Y)}{\\sqrt{Var(X)Var(Y)}}$ , $-1 \\le Correlation \\le 1$\n",
+    "\n",
+    "### Portfolio with only two securities\n",
+    "* Consider two securities $S_1$ and $S_2$, and their expected returns $r_1$ and $r_2$ respectively.\n",
+    "* The initial value of the portfolio $V(0)=$\n",
+    "\n",
+    "\n",
+    "Question: How to find optimum weights\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
