--- a/markowitz-portfolio-theory.ipynb
+++ b/markowitz-portfolio-theory.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modern Portfolio Theory (Markowitz model)\n",
     "\n",
-    "### Table of Contents\n",
+    "### Contents\n",
     "**[Question](#Question)**<br>\n",
     "**[Background](#Background)**<br>\n",
     "**[Source of data](#Source-of-data)**<br>\n",
