--- a/markowitz-portfolio-theory.ipynb
+++ b/markowitz-portfolio-theory.ipynb
@@ -756,8 +756,7 @@
    "metadata": {},
    "source": [
     "## Optimization Method\n",
-    "\n",
-    "In this section, a portfolio with the highest sharpe ratio is calculated from all the possible portfolios. This portfolio is also callled the optiaml portfolio."
+    "In this section, weights a portfolio with the highest Sharpe ratio is calculated from all the possible portfolio weights. This portfolio is also called the optimal portfolio. The optimal portfolio is obtained using the \"scipy.optimize.minimize\" library. Here, the negative value of the Sharpe ratio is minimized, which is equivalent to maximizing the Sharpe ratio."
    ]
   },
   {
